--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body{
     color: white;
 }
 header{
-    font-size: 24px;
-    border-bottom: 2px solid yellow;
+    font-size: 40px;
+    border-bottom: 2px solid orange;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,4 +23,27 @@ header ul, li, a{
     padding: 2px;
     margin: 0;
 }
+
+.what-is-this {
+    background-color: rgb(240, 240, 184);
+    color: black;
+    border: 10px solid magenta;
+    margin-top: 5px;
+    padding-left: 5px;
+    margin-bottom: 5px;
+}
+.what-is-this h2 {
+    font-size: 38px;
+    padding: 0;
+    margin-top: 5px;
+}
+.what-is-this p, a {
+    font-size: 25px;
+}
+.orange-line {
+    background-color: orange;
+    height: 2px;
+    border: none;
+}
+ 
 
