--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
     background-color: black;
     color: white;
 }
 header{
-    font-size: 40px;
+    font-size: 22px;
     border-bottom: 2px solid orange;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     padding: 0;
     padding-bottom: 15px;
     margin: 0;
+    text-align: center;
 }
 header h4{
     font-size: 16px;
@@ -18,26 +20,27 @@ header h4{
     margin: 0;
 }
 header ul, li, a{
-    font-size: 15px;
+    font-size: 14px;
     color:aqua;
     padding: 2px;
     margin: 0;
 }
-
-.what-is-this {
+.section {
     background-color: rgb(240, 240, 184);
     color: black;
-    border: 10px solid magenta;
     margin-top: 5px;
-    padding-left: 5px;
+    padding: 10px;
     margin-bottom: 5px;
 }
-.what-is-this h2 {
+.what-is-this {
+    border: 10px solid magenta;
+}
+.section h2 {
     font-size: 38px;
     padding: 0;
     margin-top: 5px;
 }
-.what-is-this p, a {
+.section p, a {
     font-size: 25px;
 }
 .orange-line {
@@ -45,5 +48,14 @@ header ul, li, a{
     height: 2px;
     border: none;
 }
+.how-does-this-work {
+    border: 10px solid aqua;
+}
+.how-does-this-work p span {
+    font-size: 21px;
+    letter-spacing: 1px;
+}
+
+
  
 
