Finished with 'But Why?' section

--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ header ul, li, a{
     font-size: 21px;
     letter-spacing: 1px;
 }
+.unique-link {
+    color: blue;
+    text-decoration: underline aqua;
+}
 
 
  
