--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     background-color: black;
     color: white;
@@ -25,6 +28,15 @@ header ul, li, a{
     padding: 2px;
     margin: 0;
 }
+header ul {
+    text-align: center;
+}
+header li::before {
+    content: "•"; 
+    color: white;
+    margin-right: 5px;
+}
+
 .section {
     background-color: rgb(240, 240, 184);
     color: black;
@@ -58,6 +70,9 @@ header ul, li, a{
 .unique-link {
     color: blue;
     text-decoration: underline aqua;
+}
+.but-why {
+    border: 10px solid orangered;
 }
 footer {
     height: 70px;
